--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Books Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <title>Book Store</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a id="book-view-btn" class="nav-link active" aria-current="page" href="#">Book Table</a>
+                        <a id="books-view-btn" class="nav-link active" aria-current="page" href="#">Book Table</a>
                     </li>
                     <li class="nav-item">
                         <a id="new-book-view-btn" class="nav-link" href="#">New Book</a>
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <div class="container">
-        <!--Books View-->
+        <!-- Books View -->
         <div class="row" id="book-view">
             <div class="col-10 offset-1">
                 <h4 class="display-4">Book View</h4>
@@ -61,48 +61,46 @@
                 </div>
             </div>
         </div>
-    </div>
-<!-- Edit/Delete View -->
-<div class="row" id="edit-delete-view">
-    <div class="col-10 offset-1">
-        <h4 class="display-4">Edit/Delete</h4>
-        <div class="row">
+        <!-- Edit/Delete View -->
+        <div class="row" id="edit-delete-view">
             <div class="col-10 offset-1">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Genre</th>
-                            <th>Publisher</th>
-                            <th>Date of publication</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+                <h4 class="display-4">Edit/Delete</h4>
+                <div class="row">
+                    <div class="col-10 offset-1">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Genre</th>
+                                    <th>Publisher</th>
+                                    <th>Date of publication</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- New Book View -->
+        <div class="row" id="new-book-view">
+            <div class="col-10 offset-1">
+                <h4 class="display-4">New Book</h4>
+                <div class="row">
+                    <div class="col-10 offset-1">
+                        <input type="text" class="form-control" name="book" placeholder="Book name"><br>
+                        <select name="genre" id="genre-select" class="form-control"></select><br>
+                        <select name="publisher" id="publisher-select" class="form-control"></select><br>
+                        <label for="date"> Date of publication</label>
+                        <input type="date" id="date" class="form-control"><br>
+                        <button id="save-btn" class="form-control btn btn-primary">Save</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- New Book View -->
-<div class="row" id="add-book-view">
-    <div class="col-10 offset-1">
-        <h4 class="display-4">New Book</h4>
-        <div class="row">
-            <div class="col-10 offset-1">
-                <input type="text" class="form-control" name="book" placeholder="Book name"><br>
-                <select name="genre" id="genre-select" class="form-control"></select><br>
-                <select name="publisher" id="publisher-select" class="form-control"></select><br>
-                <label for="date"> Date of publication</label>
-                <input type="date" id="date" class="form-control"><br>
-                <button id="save-btn" class="form-control btn btn-primary">Save</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script src="main.js"></script>
 </body>
+<script src="main.js"></script>
 </html>
